--- a/test-directory/index.html
+++ b/test-directory/index.html
@@ -9,6 +9,8 @@
         <h1>
             Michael Cassens
         </h1>
+        <h2>This was my first sub-title</h2>
+        
         <p>
             This is my first web page!
         </p>
