--- a/test-directory/index.html
+++ b/test-directory/index.html
@@ -9,7 +9,7 @@
         <h1>
             Michael Cassens
         </h1>
-        <h2>This was my first sub-title</h2>
+        <h2>This is a different sub-title</h2>
         
         <p>
             This is my first web page!
